--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-text-mask": "^5.4.3"
+    "react-text-mask": "^5.4.3",
+    "use-between": "^0.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
