--- a/src/ProjectCIPTEA.dproj
+++ b/src/ProjectCIPTEA.dproj
@@ -139,7 +139,7 @@
         <DCC_ExeOutput>.\</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <DCC_UsePackage>Pages;Services</DCC_UsePackage>
+        <DCC_UsePackage>Pages</DCC_UsePackage>
         <UsePackages>true</UsePackages>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
