--- a/CIPTEABackend.dproj
+++ b/CIPTEABackend.dproj
@@ -137,6 +137,7 @@
             <Form>ServiceConnection</Form>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="src\Utils\Utils.ImageFormat.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
