--- a/src/Pages/Pages.dproj
+++ b/src/Pages/Pages.dproj
@@ -152,6 +152,8 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\Utils\Utils.Tools.pas"/>
+        <DCCReference Include="..\Configs\Configs.GLOBAL.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
