--- a/src/Pages/Pages.dproj
+++ b/src/Pages/Pages.dproj
@@ -59,7 +59,7 @@
         <SanitizedProjectName>Pages</SanitizedProjectName>
         <DCC_BplOutput>.\bin</DCC_BplOutput>
         <DCC_DcpOutput>.\bin</DCC_DcpOutput>
-        <DCC_UnitSearchPath>modules\.dcp;modules\.dcu;modules;modules\dataset-serialize\src;modules\restrequest4delphi\src;modules\router4delphi\src;modules\synpdf;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>$(DCC_UnitSearchPath);modules\.dcp;modules\.dcu;modules;modules\HStorage4Bind\src;modules\aws4d\src;modules\dataset-serialize\src;modules\hstorage4d\src;modules\localcache4d\samples\LocalCache4D;modules\localcache4d\src;modules\restrequest4delphi\src;modules\router4delphi\src;modules\translator4d\samples\GoogleTranslator;modules\translator4d\src;modules\zipcode4bind\src</DCC_UnitSearchPath>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Android)'!=''">
         <DCC_CBuilderOutput>None</DCC_CBuilderOutput>
