--- a/CIPTEABackend.dproj
+++ b/CIPTEABackend.dproj
@@ -145,6 +145,7 @@
         <DCCReference Include="src\Controllers\Controllers.Auth.pas"/>
         <DCCReference Include="src\Providers\Providers.Authorization.pas"/>
         <DCCReference Include="src\Config\Configs.Global.pas"/>
+        <DCCReference Include="src\Utils\Utils.Tools.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
