--- a/src/Pages/Pages.dproj
+++ b/src/Pages/Pages.dproj
@@ -158,6 +158,11 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="Providers\Providers.PrivateRoute.pas"/>
+        <DCCReference Include="Pages.Login.pas">
+            <Form>PageLogin</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
