--- a/src/Pages/Pages.dproj
+++ b/src/Pages/Pages.dproj
@@ -5,7 +5,7 @@
         <ProjectVersion>18.8</ProjectVersion>
         <FrameworkType>FMX</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Package</AppType>
@@ -163,6 +163,15 @@
             <Form>PageLogin</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="Pages.NewUser.pas">
+            <Form>PageNewUser</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
+        <DCCReference Include="..\Services\Services.User.pas">
+            <Form>ServiceUser</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -205,6 +214,12 @@
                     </Platform>
                 </DeployFile>
                 <DeployFile LocalName="bin\Pages.bpl" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>Pages.bpl</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="bin\Pages.bpl" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Pages.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
