--- a/src/Pages/Pages.dproj
+++ b/src/Pages/Pages.dproj
@@ -172,6 +172,10 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="Pages.Config.pas">
+            <Form>PageConfig</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
